--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.1"
 
 loans:
-  message: "Welcome to E3azyBank loans related prod APIs"
+  message: "Welcome to E3azyBank loans related production APIs"
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "aishwarya@eazybank.com"
