--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.1"
 
 cards:
-  message: "Welcome to E3azyBank cards related production APIs"
+  message: "Welcome to E3azyBank cards related prod APIs"
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "aishwarya@eazybank.com"
